--- a/workflows/release.yml
+++ b/workflows/release.yml
@@ -1,6 +1,9 @@
 name: release
 on:
   push:
+    # Use push on master event to run workflow instead of pull_request
+    # closed (merged) event because github token doesn't have write permission
+    # for pull_request from fork repository.
     branches:
       - master
     tags:
@@ -14,19 +17,19 @@ jobs:
     if: github.event.action != 'labeled'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      # Bump version on merging Pull Requests with specific labels.
-      # (bump:major,bump:minor,bump:patch)
+      # Bump version on merging Pull Requests with specific labels. (bump:major,bump:minor,bump:patch)
       - id: bumpr
         if: "!startsWith(github.ref, 'refs/tags/')"
-        uses: gsoc2/action-bumpr@v1
+        name: gsoc2/action-bumpr
+        uses: ./
 
-      # Update corresponding major and minor tag.
-      # e.g. Update v1 and v1.2 when releasing v1.2.3
+      # Update corresponding major and minor tag. e.g. Update v1 and v1.2 when releasing v1.2.3
       - uses: gsoc2/action-update-semver@v1
         if: "!steps.bumpr.outputs.skip"
         with:
+          github_token: ${{ secrets.github_token }}
           tag: ${{ steps.bumpr.outputs.next_version }}
 
       # Get tag name.
@@ -54,6 +57,7 @@ jobs:
     if: github.event.action == 'labeled'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Post bumpr status comment
-        uses: gsoc2/action-bumpr@v1
+      - uses: actions/checkout@v4
+      # Post bumpr status comment
+      - name: gsoc2/action-bumpr
+        uses: ./
